feat: Docker + NGINX + CI/CD - Full system containerization
- Add Dockerfiles for all 11 services (multi-stage, non-root, JAVA_OPTS)
- Add docker-compose.yml with NGINX, healthchecks, startup ordering
- Add NGINX reverse proxy (API routes, WebSocket support)
- Add .env.example for centralized configuration
- Add init-databases.sql for PostgreSQL auto-init (8 DBs + schemas)
- Add GitHub Actions CI/CD pipeline
- Add WebSocket gateway route (/ws/** -> notification-service)
- Add .dockerignore per service for optimized builds
- Refactor all application.properties to use env vars with defaults
- Remove all bootstrap.properties (Spring Boot 3 migration)
- Add spring-retry + AOP deps for config-server retry
- Externalize CORS origins via ALLOWED_ORIGINS env var
- Remove hardcoded secrets from source code